--- a/INTITA/Modules/Profile/Cells/ProfileHeader.xib
+++ b/INTITA/Modules/Profile/Cells/ProfileHeader.xib
@@ -14,88 +14,108 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ProfileHeader" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="234" id="KGk-i7-Jjw" customClass="ProfileHeader" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="331" height="234"/>
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ProfileHeader" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="324" id="KGk-i7-Jjw" customClass="ProfileHeader" customModule="INTITA" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="474" height="324"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="331" height="234"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="474" height="324"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoWithoutBackgroung" translatesAutoresizingMaskIntoConstraints="NO" id="lJd-YN-elw">
-                        <rect key="frame" x="103" y="21" width="125" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="DHP-aZ-zJT"/>
-                            <constraint firstAttribute="width" constant="125" id="XV5-mW-3nJ"/>
-                        </constraints>
-                    </imageView>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLK-XV-D6J">
-                        <rect key="frame" x="105.5" y="67" width="120" height="117"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ugS-Oe-Uut">
+                        <rect key="frame" x="0.0" y="0.0" width="474" height="260"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ua9-CR-JUF">
-                                <rect key="frame" x="68.5" y="-4.5" width="25" height="25"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoWithoutBackgroung" translatesAutoresizingMaskIntoConstraints="NO" id="lJd-YN-elw">
+                                <rect key="frame" x="174.5" y="21" width="125" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="25" id="auE-iL-oQY"/>
-                                    <constraint firstAttribute="width" constant="25" id="o80-Eo-zca"/>
+                                    <constraint firstAttribute="height" constant="30" id="VyB-YK-fkn"/>
+                                    <constraint firstAttribute="width" constant="125" id="ncB-fr-gdn"/>
                                 </constraints>
-                                <state key="normal" image="editBtn"/>
-                                <connections>
-                                    <action selector="editBtnTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="rav-Fa-BM6"/>
-                                </connections>
-                            </button>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qFJ-cs-5SH">
-                                <rect key="frame" x="4" y="4.5" width="112" height="112.5"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLK-XV-D6J">
+                                <rect key="frame" x="172" y="70" width="130" height="130"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="amO-lp-LyI">
-                                        <rect key="frame" x="16" y="16" width="80" height="80.5"/>
-                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ua9-CR-JUF">
+                                        <rect key="frame" x="76.5" y="-4" width="25" height="25"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="Npt-Is-lew"/>
+                                            <constraint firstAttribute="width" constant="25" id="tE1-AR-CNR"/>
+                                        </constraints>
+                                        <state key="normal" image="editBtn"/>
+                                        <connections>
+                                            <action selector="editBtnTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="rav-Fa-BM6"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qFJ-cs-5SH">
+                                        <rect key="frame" x="4" y="8" width="122" height="122"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="amO-lp-LyI">
+                                                <rect key="frame" x="16" y="16" width="90" height="90"/>
+                                            </imageView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="amO-lp-LyI" firstAttribute="centerY" secondItem="qFJ-cs-5SH" secondAttribute="centerY" id="2ZF-dr-1iS"/>
+                                            <constraint firstItem="amO-lp-LyI" firstAttribute="top" secondItem="qFJ-cs-5SH" secondAttribute="top" constant="16" id="6oB-8n-Guc"/>
+                                            <constraint firstItem="amO-lp-LyI" firstAttribute="centerX" secondItem="qFJ-cs-5SH" secondAttribute="centerX" id="SFd-9U-8xA"/>
+                                            <constraint firstItem="amO-lp-LyI" firstAttribute="leading" secondItem="qFJ-cs-5SH" secondAttribute="leading" constant="16" id="dhg-rz-KJM"/>
+                                            <constraint firstAttribute="width" constant="122" id="mO6-JS-KoS"/>
+                                            <constraint firstAttribute="height" constant="122" id="t5Y-K6-kBw"/>
+                                            <constraint firstAttribute="bottom" secondItem="amO-lp-LyI" secondAttribute="bottom" constant="16" id="xWB-oh-nZM"/>
+                                            <constraint firstAttribute="trailing" secondItem="amO-lp-LyI" secondAttribute="trailing" constant="16" id="xo7-nK-bhg"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="amO-lp-LyI" secondAttribute="trailing" constant="16" id="8Wf-zh-uxZ"/>
-                                    <constraint firstItem="amO-lp-LyI" firstAttribute="top" secondItem="qFJ-cs-5SH" secondAttribute="top" constant="16" id="Vrl-rg-qkI"/>
-                                    <constraint firstAttribute="width" secondItem="qFJ-cs-5SH" secondAttribute="height" id="YpF-pM-5V8"/>
-                                    <constraint firstAttribute="bottom" secondItem="amO-lp-LyI" secondAttribute="bottom" constant="16" id="aWa-H3-tpI"/>
-                                    <constraint firstItem="amO-lp-LyI" firstAttribute="leading" secondItem="qFJ-cs-5SH" secondAttribute="leading" constant="16" id="utS-vv-NqA"/>
+                                    <constraint firstAttribute="width" constant="130" id="Arf-2w-zBP"/>
+                                    <constraint firstAttribute="bottom" secondItem="qFJ-cs-5SH" secondAttribute="bottom" id="DEN-dW-XIb"/>
+                                    <constraint firstItem="qFJ-cs-5SH" firstAttribute="leading" secondItem="RLK-XV-D6J" secondAttribute="leading" constant="4" id="Jmc-nj-mSE"/>
+                                    <constraint firstItem="Ua9-CR-JUF" firstAttribute="centerX" secondItem="qFJ-cs-5SH" secondAttribute="centerX" constant="24" id="LZr-90-3PA"/>
+                                    <constraint firstItem="Ua9-CR-JUF" firstAttribute="top" secondItem="RLK-XV-D6J" secondAttribute="top" constant="-4" id="RDM-tP-toa"/>
+                                    <constraint firstAttribute="trailing" secondItem="qFJ-cs-5SH" secondAttribute="trailing" constant="4" id="ow2-1V-vep"/>
+                                    <constraint firstAttribute="height" constant="130" id="rV0-ow-ckj"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qse-Hb-MYw">
+                                <rect key="frame" x="8" y="203" width="458" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="kmF-Em-cFE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="30"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
+                        <color key="backgroundColor" name="mainColor"/>
                         <constraints>
-                            <constraint firstItem="Ua9-CR-JUF" firstAttribute="centerX" secondItem="qFJ-cs-5SH" secondAttribute="centerX" multiplier="1.35" id="6jl-oI-A6v"/>
-                            <constraint firstItem="qFJ-cs-5SH" firstAttribute="leading" secondItem="RLK-XV-D6J" secondAttribute="leading" constant="4" id="7Me-sk-uDC"/>
-                            <constraint firstItem="Ua9-CR-JUF" firstAttribute="centerY" secondItem="qFJ-cs-5SH" secondAttribute="centerY" multiplier="0.135" id="AMA-la-Pha"/>
-                            <constraint firstAttribute="trailing" secondItem="qFJ-cs-5SH" secondAttribute="trailing" constant="4" id="AeL-LZ-rIN"/>
-                            <constraint firstAttribute="width" secondItem="RLK-XV-D6J" secondAttribute="height" multiplier="133.8:130" id="Rcv-cO-Qux"/>
-                            <constraint firstAttribute="bottom" secondItem="qFJ-cs-5SH" secondAttribute="bottom" id="U5c-Rn-5IG"/>
-                            <constraint firstItem="qFJ-cs-5SH" firstAttribute="centerX" secondItem="RLK-XV-D6J" secondAttribute="centerX" id="oG3-8H-0Yz"/>
+                            <constraint firstItem="lJd-YN-elw" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="3ZZ-32-SeQ"/>
+                            <constraint firstAttribute="bottom" secondItem="Qse-Hb-MYw" secondAttribute="bottom" constant="3" id="3oP-g0-4GQ"/>
+                            <constraint firstItem="lJd-YN-elw" firstAttribute="top" secondItem="ugS-Oe-Uut" secondAttribute="top" constant="21" id="7eh-0k-Nbx"/>
+                            <constraint firstAttribute="trailing" secondItem="Qse-Hb-MYw" secondAttribute="trailing" constant="8" id="B8h-rh-TIP"/>
+                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="top" secondItem="RLK-XV-D6J" secondAttribute="bottom" constant="3" id="RLl-rS-rV5"/>
+                            <constraint firstItem="RLK-XV-D6J" firstAttribute="top" secondItem="lJd-YN-elw" secondAttribute="bottom" constant="19" id="SKN-0Y-eTN"/>
+                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="leading" secondItem="ugS-Oe-Uut" secondAttribute="leading" constant="8" id="Sc8-f3-zDg"/>
+                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="X1G-Qe-qu2"/>
+                            <constraint firstItem="RLK-XV-D6J" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="dxV-g8-vIU"/>
+                            <constraint firstAttribute="height" constant="260" id="wWH-n5-cB5"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qse-Hb-MYw">
-                        <rect key="frame" x="8" y="187" width="315" height="39"/>
-                        <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="30"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
-                <color key="backgroundColor" name="mainColor"/>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="lJd-YN-elw" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="05G-9Q-EIg"/>
-                    <constraint firstItem="lJd-YN-elw" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="0Oc-DH-A6d"/>
-                    <constraint firstAttribute="trailing" secondItem="Qse-Hb-MYw" secondAttribute="trailing" constant="8" id="0wH-nf-QJm"/>
-                    <constraint firstItem="RLK-XV-D6J" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="KbO-Pi-YEa"/>
-                    <constraint firstItem="RLK-XV-D6J" firstAttribute="top" secondItem="lJd-YN-elw" secondAttribute="bottom" constant="16" id="MHj-Me-p7L"/>
-                    <constraint firstItem="RLK-XV-D6J" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.5" id="NcZ-Ec-j0u"/>
-                    <constraint firstItem="Qse-Hb-MYw" firstAttribute="top" secondItem="RLK-XV-D6J" secondAttribute="bottom" constant="3" id="XYt-ZI-1rH"/>
-                    <constraint firstItem="Qse-Hb-MYw" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" constant="3" id="enA-a0-eYs"/>
-                    <constraint firstItem="Qse-Hb-MYw" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="iKw-VB-M6K"/>
-                    <constraint firstItem="Qse-Hb-MYw" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="mX9-IB-a55"/>
+                    <constraint firstAttribute="trailing" secondItem="ugS-Oe-Uut" secondAttribute="trailing" id="7Q8-nM-qGO"/>
+                    <constraint firstItem="ugS-Oe-Uut" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Bst-Y5-DvH"/>
+                    <constraint firstAttribute="bottom" secondItem="ugS-Oe-Uut" secondAttribute="bottom" constant="8" id="HnJ-Bw-Kgs"/>
+                    <constraint firstItem="ugS-Oe-Uut" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="XOx-pN-G4x"/>
+                    <constraint firstItem="ugS-Oe-Uut" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="cxq-TG-wdD"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="avatarView" destination="amO-lp-LyI" id="ure-dt-Vo9"/>
                 <outlet property="avatarWrapperView" destination="qFJ-cs-5SH" id="tGD-RU-J2k"/>
+                <outlet property="container" destination="ugS-Oe-Uut" id="rWA-qu-2Ra"/>
                 <outlet property="editBtn" destination="Ua9-CR-JUF" id="2db-H5-Qua"/>
                 <outlet property="label" destination="Qse-Hb-MYw" id="9Ph-K4-79c"/>
             </connections>
-            <point key="canvasLocation" x="290.57971014492756" y="72.991071428571431"/>
+            <point key="canvasLocation" x="186.95652173913044" y="103.125"/>
         </tableViewCell>
     </objects>
     <resources>
