--- a/INTITA/Modules/Profile/Cells/ProfileTableViewCell.xib
+++ b/INTITA/Modules/Profile/Cells/ProfileTableViewCell.xib
@@ -14,7 +14,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ProfileTableViewCell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="107" id="KGk-i7-Jjw" customClass="ProfileTableViewCell" customModule="INTITA" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" restorationIdentifier="ProfileTableViewCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" indentationWidth="10" rowHeight="107" id="KGk-i7-Jjw" customClass="ProfileTableViewCell" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="363" height="107"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -61,6 +61,7 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="button" destination="OfD-7m-OZ7" id="Jch-bn-n9w"/>
+                <outlet property="container" destination="5Lk-gc-96P" id="ALA-du-Sbd"/>
                 <outlet property="label" destination="a1D-Yu-6YK" id="v8h-Zv-tcL"/>
             </connections>
             <point key="canvasLocation" x="93.478260869565219" y="41.852678571428569"/>
