--- a/INTITA/Modules/Profile/Cells/ProfileHeaderView.xib
+++ b/INTITA/Modules/Profile/Cells/ProfileHeaderView.xib
@@ -17,112 +17,84 @@
         <tableViewCell contentMode="scaleToFill" restorationIdentifier="ProfileHeaderView" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" indentationWidth="10" reuseIdentifier="ProfileHeaderView" rowHeight="324" id="KGk-i7-Jjw" customClass="ProfileHeaderView" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="474" height="324"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="474" height="324"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ugS-Oe-Uut">
-                        <rect key="frame" x="0.0" y="0.0" width="474" height="308"/>
+                        <rect key="frame" x="0.0" y="0.0" width="474" height="316"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoWithoutBackgroung" translatesAutoresizingMaskIntoConstraints="NO" id="lJd-YN-elw">
-                                <rect key="frame" x="174.5" y="21" width="125" height="30"/>
+                                <rect key="frame" x="174.5" y="20" width="125" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="VyB-YK-fkn"/>
-                                    <constraint firstAttribute="width" constant="125" id="ncB-fr-gdn"/>
+                                    <constraint firstAttribute="width" constant="125" id="fBr-Gn-OPH"/>
+                                    <constraint firstAttribute="height" constant="30" id="qYQ-2a-TMA"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLK-XV-D6J">
-                                <rect key="frame" x="172" y="70" width="130" height="130"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ua9-CR-JUF">
-                                        <rect key="frame" x="76.5" y="-4" width="25" height="25"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="25" id="Npt-Is-lew"/>
-                                            <constraint firstAttribute="width" constant="25" id="tE1-AR-CNR"/>
-                                        </constraints>
-                                        <state key="normal" image="editBtn"/>
-                                        <connections>
-                                            <action selector="editBtnTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="rav-Fa-BM6"/>
-                                        </connections>
-                                    </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qFJ-cs-5SH">
-                                        <rect key="frame" x="4" y="8" width="122" height="122"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="amO-lp-LyI">
-                                                <rect key="frame" x="16" y="16" width="90" height="90"/>
-                                                <gestureRecognizers/>
-                                            </imageView>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="amO-lp-LyI" firstAttribute="centerY" secondItem="qFJ-cs-5SH" secondAttribute="centerY" id="2ZF-dr-1iS"/>
-                                            <constraint firstItem="amO-lp-LyI" firstAttribute="top" secondItem="qFJ-cs-5SH" secondAttribute="top" constant="16" id="6oB-8n-Guc"/>
-                                            <constraint firstItem="amO-lp-LyI" firstAttribute="centerX" secondItem="qFJ-cs-5SH" secondAttribute="centerX" id="SFd-9U-8xA"/>
-                                            <constraint firstItem="amO-lp-LyI" firstAttribute="leading" secondItem="qFJ-cs-5SH" secondAttribute="leading" constant="16" id="dhg-rz-KJM"/>
-                                            <constraint firstAttribute="width" constant="122" id="mO6-JS-KoS"/>
-                                            <constraint firstAttribute="height" constant="122" id="t5Y-K6-kBw"/>
-                                            <constraint firstAttribute="bottom" secondItem="amO-lp-LyI" secondAttribute="bottom" constant="16" id="xWB-oh-nZM"/>
-                                            <constraint firstAttribute="trailing" secondItem="amO-lp-LyI" secondAttribute="trailing" constant="16" id="xo7-nK-bhg"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="130" id="Arf-2w-zBP"/>
-                                    <constraint firstAttribute="bottom" secondItem="qFJ-cs-5SH" secondAttribute="bottom" id="DEN-dW-XIb"/>
-                                    <constraint firstItem="qFJ-cs-5SH" firstAttribute="leading" secondItem="RLK-XV-D6J" secondAttribute="leading" constant="4" id="Jmc-nj-mSE"/>
-                                    <constraint firstItem="Ua9-CR-JUF" firstAttribute="centerX" secondItem="qFJ-cs-5SH" secondAttribute="centerX" constant="24" id="LZr-90-3PA"/>
-                                    <constraint firstItem="Ua9-CR-JUF" firstAttribute="top" secondItem="RLK-XV-D6J" secondAttribute="top" constant="-4" id="RDM-tP-toa"/>
-                                    <constraint firstAttribute="trailing" secondItem="qFJ-cs-5SH" secondAttribute="trailing" constant="4" id="ow2-1V-vep"/>
-                                    <constraint firstAttribute="height" constant="130" id="rV0-ow-ckj"/>
-                                </constraints>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qse-Hb-MYw">
-                                <rect key="frame" x="71" y="203" width="332" height="54"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="54" id="kmF-Em-cFE"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="16" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qse-Hb-MYw">
+                                <rect key="frame" x="58" y="236.5" width="358" height="35"/>
                                 <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ij8-dx-qrF">
-                                <rect key="frame" x="71" y="257" width="332" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="31" id="NrG-B9-0he"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ij8-dx-qrF">
+                                <rect key="frame" x="58" y="279.5" width="358" height="16.5"/>
                                 <fontDescription key="fontDescription" name="MyriadPro-Regular" family="Myriad Pro" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="defaultAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="amO-lp-LyI">
+                                <rect key="frame" x="192" y="113" width="90" height="90"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="3XE-Dw-R0F"/>
+                                    <constraint firstAttribute="width" constant="90" id="e84-MX-D9z"/>
+                                    <constraint firstAttribute="width" secondItem="amO-lp-LyI" secondAttribute="height" multiplier="1:1" id="zgu-Do-wUh"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ua9-CR-JUF">
+                                <rect key="frame" x="257" y="84" width="25" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="25" id="IPY-fu-kkj"/>
+                                    <constraint firstAttribute="width" constant="25" id="VG1-js-80N"/>
+                                </constraints>
+                                <state key="normal" image="editBtn"/>
+                                <connections>
+                                    <action selector="editBtnTapped" destination="KGk-i7-Jjw" eventType="touchUpInside" id="rav-Fa-BM6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" name="mainColor"/>
                         <constraints>
-                            <constraint firstItem="lJd-YN-elw" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="3ZZ-32-SeQ"/>
-                            <constraint firstItem="lJd-YN-elw" firstAttribute="top" secondItem="ugS-Oe-Uut" secondAttribute="top" constant="21" id="7eh-0k-Nbx"/>
-                            <constraint firstItem="ij8-dx-qrF" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="MJZ-n1-d4g"/>
-                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="top" secondItem="RLK-XV-D6J" secondAttribute="bottom" constant="3" id="RLl-rS-rV5"/>
-                            <constraint firstItem="RLK-XV-D6J" firstAttribute="top" secondItem="lJd-YN-elw" secondAttribute="bottom" constant="19" id="SKN-0Y-eTN"/>
-                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="X1G-Qe-qu2"/>
-                            <constraint firstItem="RLK-XV-D6J" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="dxV-g8-vIU"/>
-                            <constraint firstAttribute="bottom" secondItem="ij8-dx-qrF" secondAttribute="bottom" constant="20" id="fGa-Zn-iKa"/>
-                            <constraint firstAttribute="height" constant="308" id="jLA-2r-MT3"/>
-                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="width" secondItem="ij8-dx-qrF" secondAttribute="width" id="k2h-ZG-0RC"/>
-                            <constraint firstItem="ij8-dx-qrF" firstAttribute="top" secondItem="Qse-Hb-MYw" secondAttribute="bottom" id="wQB-nc-bMo"/>
-                            <constraint firstItem="ij8-dx-qrF" firstAttribute="width" secondItem="ugS-Oe-Uut" secondAttribute="width" multiplier="0.7" id="wX9-fu-ygO"/>
+                            <constraint firstAttribute="trailing" secondItem="Qse-Hb-MYw" secondAttribute="trailing" constant="58" id="5UL-w9-xEH"/>
+                            <constraint firstItem="lJd-YN-elw" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="94m-0Y-rwy"/>
+                            <constraint firstItem="ij8-dx-qrF" firstAttribute="top" secondItem="Qse-Hb-MYw" secondAttribute="bottom" constant="8" id="AcG-xt-Py9"/>
+                            <constraint firstItem="amO-lp-LyI" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="Bes-gJ-OmI"/>
+                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="centerX" secondItem="ugS-Oe-Uut" secondAttribute="centerX" id="DiM-9R-kMB"/>
+                            <constraint firstItem="Ua9-CR-JUF" firstAttribute="top" relation="greaterThanOrEqual" secondItem="lJd-YN-elw" secondAttribute="bottom" constant="8" id="GUr-pC-fZH"/>
+                            <constraint firstAttribute="trailing" secondItem="ij8-dx-qrF" secondAttribute="trailing" constant="58" id="NRi-sW-6Ah"/>
+                            <constraint firstItem="amO-lp-LyI" firstAttribute="top" secondItem="Ua9-CR-JUF" secondAttribute="bottom" constant="4" id="SXU-8F-EEn"/>
+                            <constraint firstAttribute="bottom" secondItem="ij8-dx-qrF" secondAttribute="bottom" constant="20" id="VfP-3J-YjS"/>
+                            <constraint firstItem="ij8-dx-qrF" firstAttribute="leading" secondItem="ugS-Oe-Uut" secondAttribute="leading" constant="58" id="g4C-yK-Mr4"/>
+                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="top" relation="greaterThanOrEqual" secondItem="amO-lp-LyI" secondAttribute="bottom" constant="8" id="ibH-qa-pIo"/>
+                            <constraint firstItem="Ua9-CR-JUF" firstAttribute="trailing" secondItem="amO-lp-LyI" secondAttribute="trailing" id="j7m-m3-Ctd"/>
+                            <constraint firstItem="Qse-Hb-MYw" firstAttribute="leading" secondItem="ugS-Oe-Uut" secondAttribute="leading" constant="58" id="kQ3-hl-vwh"/>
+                            <constraint firstItem="amO-lp-LyI" firstAttribute="centerY" secondItem="ugS-Oe-Uut" secondAttribute="centerY" id="udf-a0-2vW"/>
+                            <constraint firstItem="lJd-YN-elw" firstAttribute="top" secondItem="ugS-Oe-Uut" secondAttribute="top" constant="20" id="xpk-E7-7Li"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="ugS-Oe-Uut" secondAttribute="trailing" id="7Q8-nM-qGO"/>
-                    <constraint firstItem="ugS-Oe-Uut" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Bst-Y5-DvH"/>
-                    <constraint firstAttribute="bottom" secondItem="ugS-Oe-Uut" secondAttribute="bottom" constant="8" id="HnJ-Bw-Kgs"/>
-                    <constraint firstItem="ugS-Oe-Uut" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="XOx-pN-G4x"/>
-                    <constraint firstItem="ugS-Oe-Uut" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="cxq-TG-wdD"/>
+                    <constraint firstItem="ugS-Oe-Uut" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="5bP-vw-Os3"/>
+                    <constraint firstAttribute="bottom" secondItem="ugS-Oe-Uut" secondAttribute="bottom" constant="8" id="Tsk-Wr-grO"/>
+                    <constraint firstAttribute="trailing" secondItem="ugS-Oe-Uut" secondAttribute="trailing" id="eA5-za-1R5"/>
+                    <constraint firstItem="ugS-Oe-Uut" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="fMe-jA-v2n"/>
+                    <constraint firstItem="ugS-Oe-Uut" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="nAY-qA-FOP"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="avatarView" destination="amO-lp-LyI" id="ure-dt-Vo9"/>
-                <outlet property="avatarWrapperView" destination="qFJ-cs-5SH" id="tGD-RU-J2k"/>
                 <outlet property="container" destination="ugS-Oe-Uut" id="rWA-qu-2Ra"/>
                 <outlet property="nameLabel" destination="Qse-Hb-MYw" id="9Ph-K4-79c"/>
                 <outlet property="specializationLabel" destination="ij8-dx-qrF" id="Vzf-bj-54j"/>
